# arrivia-agentic-travel-recommendations-api

./: .env.example  .gitattributes  .gitignore  BREAK_FIX_LOG.md  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml
.codex/: PROMPT-SPEED-ADDENDUM.md  README.md  cloud-maintenance.sh  cloud-setup.sh
.ralphy/: config.yaml
docs/architecture/: README.md  arrivia-system.drawio
docs/certification/: CERTIFICATION_LEVELS.md  (+3 more)
prd/: 01-plan.yaml  02-setup.yaml  03-core-service.yaml  04-mcp-ship.yaml  05-submit-hardening.yaml
sbom/: README.md  pip-audit.json  python.cdx.json
scripts/: Invoke-CodexCloudWarm.ps1  Invoke-CodexCloudWorker.ps1  Register-CodexCloudEnvironment.ps1  __init__.py  deployment_verifier.py  healthy_mock_benchmark.py  install-locked-offline.sh  wiremock_partner_fault.py
tests/: test_api_routes.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_container_scaffolding.py  test_deployment_verifier.py  test_design_authority.py  test_docs_contracts.py  test_domain.py  test_healthy_mock_benchmark.py  test_integration_clients.py  test_mcp_smoke.py  test_mcp_stdio_smoke.py  test_metrics.py  test_observability.py  test_policy_contract.py  test_readme_guidance.py  test_recommendation_orchestration.py  test_recommendations.py  test_runbook.py  test_scope_contracts.py  test_session_budget.py  test_session_budget_multiprocess.py  test_upstream_adapters.py  test_upstream_hardening.py  test_walkthrough_media.py
walkthrough/: README.md  index.html  record_live_sessions.py  render.ps1  request_probe.py  verify_media.py  view.html
(+117 files in other folders)
